# number_test

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
docker/: Dockerfile  README.md
src/number_test/: __init__.py  _cli_utils.py  cli.py  number_test.py
tests/: test_number_test.py
