[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'number_test'
version = "0.1.0" # HINT: Update your package version here.
authors = [
  {email = "stephen.richer@proton.me"},
  {name = "Stephen Richer"}
]
description = 'Boilerplate package with example numerical tests.'
readme = 'README.md'
requires-python = ">=3.7"
keywords = ['number_test']
license = {file = "LICENSE"}
classifiers=[
    'Natural Language :: English',
    'Intended Audience :: Developers',
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
# HINT: Define you package dependencies here.
dependencies = [
]

[project.urls]
repository = 'https://github.com/StephenRicher/number_test'

[project.scripts]
number_test = "number_test.cli:parseArgs"

